Implementoval som automaticke renderovanie v nizsej kvalite pri manipulacii s transfer funkciou z TransferFunctionEditoru a pri zmenu detail slideru.

--- a/src/main_window.ui
+++ b/src/main_window.ui
@@ -506,7 +506,7 @@
   </connection>
   <connection>
    <sender>cbOptionsDisplayBBox</sender>
-   <signal>toggled(bool)</signal>
+   <signal>clicked(bool)</signal>
    <receiver>volumeViewer</receiver>
    <slot>setDisplayBBox(bool)</slot>
    <hints>
